--- a/DASHBORAD/index.html
+++ b/DASHBORAD/index.html
@@ -34,7 +34,7 @@
 	          
 	            </div>
 	
-	            <div class="div-icons">
+	            <div class="icons">
 	
 	                <div>
 	                    <h3>2194</h3>
@@ -59,7 +59,7 @@
 	                </div>            </div>
 	
 	
-	                <div class="div-payment">
+	                <div class="payment">
 	
 	                    <div class="payment-right">
 	                        <div><h1>Recnt Payment<button>View All</button></h1>  </div>
