--- a/SoicalMedia/index.html
+++ b/SoicalMedia/index.html
@@ -13,8 +13,23 @@
 </head>
 <body>
   <div class="Big">
-	       
-	    </div>
+	<div><h1>Social Media <input type="text" placeholder="Search"><button>Logout</button><img src="./images/
+		" alt=""></h1></div>
+
+		<div class="Two">
+<div  class="Two-1">
+<img src="./download (8).jpg" class="image"/> 
+<h2>Salena</h2>
+</div>
+<div  class="Two-2">
+
+</div>
+<div  class="Two-3">
+
+</div>
+		</div>
+</div>
+	
 	</body> 
   
 
