--- a/SoicalMedia/index.html
+++ b/SoicalMedia/index.html
@@ -18,8 +18,23 @@
 
 		<div class="Two">
 <div  class="Two-1">
-<img src="./download (8).jpg" class="image"/> 
-<h2>Salena</h2>
+	<div class="Two-11">
+		<img src="./download (8).jpg" class="image"/> 
+		<h2>Salena</h2>
+	</div>
+	<div class="Two-11222">
+		
+		<div>
+			<h2>Home</h2>
+		</div>
+
+		<h2>Explore</h2>
+		<h2>Notifacation</h2>
+		<h2>Message</h2>
+		<h2>setting</h2>
+		<h2>Setting</h2>
+	</div>
+
 </div>
 <div  class="Two-2">
 
