--- a/SoicalMedia/index.html
+++ b/SoicalMedia/index.html
@@ -24,15 +24,35 @@
 	</div>
 	<div class="Two-11222">
 		
-		<div>
-			<h2>Home</h2>
+		<div  class="Two-1One">
+			<i class="fa fa-home"></i>
+			<h4>Home</h4>
+		</div>
+		<div  class="Two-1One">
+			<i class="fa fa-home"></i>
+			<h4>Explore</h4>
+		</div>
+		<div  class="Two-1One">
+			<i class="fa fa-home"></i>
+			<h4>Notifacation</h4>
+		</div>
+		<div  class="Two-1One">
+			<i class="fa fa-home"></i>
+			<h4>Message</h4>
+		</div>	<div  class="Two-1One">
+			<i class="fa fa-home"></i>
+			<h4>setting</h4>
+		</div>
+		<div  class="Two-1One">
+			<i class="fa fa-home"></i>
+			<h4>Setting</h4>
 		</div>
 
-		<h2>Explore</h2>
-		<h2>Notifacation</h2>
-		<h2>Message</h2>
-		<h2>setting</h2>
-		<h2>Setting</h2>
+
+
+		
+
+	
 	</div>
 
 </div>
@@ -40,7 +60,23 @@
 
 </div>
 <div  class="Two-3">
-
+	<h2>Friends</h2>
+	<div class="Two-11">
+		<img src="./download (8).jpg" class="image"/> 
+		<h2>Salena</h2>
+	</div>
+	<div class="Two-11">
+		<img src="./download (8).jpg" class="image"/> 
+		<h2>Salena</h2>
+	</div>
+	<div class="Two-11">
+		<img src="./download (8).jpg" class="image"/> 
+		<h2>Salena</h2>
+	</div>
+	<div class="Two-11">
+		<img src="./download (8).jpg" class="image"/> 
+		<h2>Salena</h2>
+	</div>
 </div>
 		</div>
 </div>
