--- a/SoicalMedia/index.html
+++ b/SoicalMedia/index.html
@@ -58,6 +58,18 @@
 </div>
 <div  class="Two-2">
 
+	<div class="Two-2-one">
+<img src="./download (8).jpg" class="image22"/>
+<img src="./images (5).jpg" class="image22"/>
+<img src="./download (8).jpg" class="image22"/>
+<img src="./images (5).jpg" class="image22"/>
+
+	</div>
+	<div class="Two-2-Two">
+
+	</div>
+
+
 </div>
 <div  class="Two-3">
 	<h2>Friends</h2>
