--- a/SoicalMedia/index.html
+++ b/SoicalMedia/index.html
@@ -66,6 +66,11 @@
 
 	</div>
 	<div class="Two-2-Two">
+		<div class="Two-11">
+			<img src="./download (8).jpg" class="image"/> 
+			<h2>Salena</h2>
+		</div>
+		<img src="./download (8).jpg " class="imageThree" />
 
 	</div>
 
@@ -74,20 +79,20 @@
 <div  class="Two-3">
 	<h2>Friends</h2>
 	<div class="Two-11">
-		<img src="./download (8).jpg" class="image"/> 
-		<h2>Salena</h2>
+		<img src="./images (6).jpg" class="image"/> 
+		<h2>LANA</h2>
 	</div>
 	<div class="Two-11">
-		<img src="./download (8).jpg" class="image"/> 
-		<h2>Salena</h2>
+		<img src="./images (7).jpg" class="image"/> 
+		<h2>FALIA</h2>
 	</div>
 	<div class="Two-11">
-		<img src="./download (8).jpg" class="image"/> 
-		<h2>Salena</h2>
+		<img src="./images (8).jpg" class="image"/> 
+		<h2>GOMESSSAA</h2>
 	</div>
 	<div class="Two-11">
-		<img src="./download (8).jpg" class="image"/> 
-		<h2>Salena</h2>
+		<img src="./images (9).jpg" class="image"/> 
+		<h2>GOMEZAAALENNAA</h2>
 	</div>
 </div>
 		</div>
