--- a/SoicalMedia/index.html
+++ b/SoicalMedia/index.html
@@ -92,7 +92,7 @@
 	</div>
 	<div class="Two-11">
 		<img src="./images (9).jpg" class="image"/> 
-		<h2>GOMEZAAALENNAA</h2>
+		<h2>ENAAAAALOPEE</h2>
 	</div>
 </div>
 		</div>
